feat: implement jwt authentication and simple rbac authorization
